# sos-2x

./: LICENSE.ucla  README  install.sh  test_svn.txt
config/: Makerules  README  wrap_module.pl
config/base/: Makefile  base.c
config/blank/: Makefile  README  blank.c
config/nic/: Makefile  README  nic.c
config/sos_tool/: Makefile  sos_tool.c
config/test_sensors/: Makefile  test_sensors_app.c
doc/: README  TODO  acknowledgments.txt  build-website.sh  downloads.txt  index.txt  layout.conf  layout.css  policies.txt  sosage.txt  todo.txt  xhtml11.css
doc/api/: doxyfile
doc/doxygen/: doxyfile
doc/in_progress_akhi/: make_system.txt  platform_contents.txt
doc/publications/: EE-ARR-SOS-2004.ppt  motivation.bib  publications.html  publications.txt  sos04eearr_poster.ppt  sos_cens_w_05.ppt  sos_cens_w_05.sxi  sos_complete_fall_04.ppt  sos_complete_fall_04.sxi  sos_mobisys_05.bib  sos_mobisys_05_talk.ppt
doc/tutorial/: add_syscall.txt  blink.txt  blink_avrora.txt  blink_mica2.txt  blink_sim.txt  ceiling_array.txt  debug.txt  dvm.txt  generic_kernel_test.txt  index.txt  installation.txt  module_prog_guide.txt  pysos.txt  sos_db_routing.txt  static_kernel.txt  surge.txt  surge_avrora.txt  surge_mica2.txt  surge_sim.txt  test_suite.txt
drivers/cc2420/: README.txt  cc2420_radio.c  vhal.c  vmac.c
drivers/i2c/: i2c_system.c  sos_i2c.c  sos_i2c_mgr.c
drivers/include/: bus_cb.h  hdlc.h  i2c_const.h
drivers/one_wire/: one_wire.c
drivers/spi/: spi.c  spi_system.c
drivers/uart/: sos_uart.c  sos_uart_mgr.c  uart.c  uart_system.c
drivers/ubmac/: UBMAC.doc  ubmac.c
extensions/rats/: RATS.doc  (+4 more)
kernel/: Makerules  codemem.c  error_type.c  fntable.c  main.c  malloc.c  memmap.c  message.c  message_net.c  message_queue.c  monitor.c  pid.c  priority.c  random.c  sched.c  sensor.c  sensor_system.c  slab.c  sos_cam.c  sos_info.c  sos_list.c  sos_logging.c  sos_module_fetcher.c  sos_shm.c  sos_timer.c  timestamp.c
modules/: Makerules  mod_pid.c
tools/sos_server/: Makefile.in  config.status  configure  configure.in
tools/sos_server/clients/: Makefile  test_sossrv_client.c
tools/sos_server/lib/: Makesossrvlib  sossrv_client.c
tools/sos_server/lib/include/: sossrv_client.h
tools/sos_server/src/: Makefile.am  Makefile.in  crc.c  dev_network.c  dev_serial.c  dev_serial_mac.c  parsecmd.c  sock_utils.c  sossrv.c
tools/sos_server/src/include/: dev_network.h  dev_serial.h  parsecmd.h  sock_utils.h  sossrv.h  sossrv_crc.h
(+1191 files in other folders)
